[package]
name = "govee"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.9.2"
tokio = {version = "1", features = ["full"]}
futures = "0.3"
uuid = "1"
warp = "0.3"
colors-transform = "0.2"
